--- a/packages/webgl/package.json
+++ b/packages/webgl/package.json
@@ -29,7 +29,10 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
+    "@smoovy/event": "^0.2.1",
+    "@smoovy/observer": "^0.4.0",
     "@smoovy/ticker": "^0.1.11",
+    "@smoovy/utils": "^0.1.16",
     "tslib": "^1.9.3"
   }
 }
