--- a/packages/component/tsconfig.json
+++ b/packages/component/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "experimentalDecorators": true
+  },
   "include": [ "src/**/*" ]
 }
