--- a/packages/tween/tsconfig.json
+++ b/packages/tween/tsconfig.json
@@ -9,7 +9,6 @@
     "src/**/*"
   ],
   "references": [
-    { "path": "../emitter" },
-    { "path": "../listener" }
-  ],
+    { "path": "../ticker" }
+  ]
 }
