--- a/packages/scroller/tsconfig.json
+++ b/packages/scroller/tsconfig.json
@@ -9,7 +9,10 @@
     "src/**/*"
   ],
   "references": [
+    { "path": "../observer" },
     { "path": "../emitter" },
+    { "path": "../ticker" },
+    { "path": "../utils" },
     { "path": "../listener" }
   ],
 }
