--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@types/eslint": "^8",
     "@types/jsdom": "^20",
-    "@types/prettier": "^2"
+    "@types/prettier": "^2",
+    "sass": "^1.56.2"
   }
 }
