--- a/packages/parallax/package.json
+++ b/packages/parallax/package.json
@@ -1,12 +1,8 @@
 {
   "name": "@smoovy/parallax",
-  "version": "0.4.5",
+  "version": "1.0.0",
   "description": "Parallax effects library",
-  "main": "dist/bundles/index.js",
-  "module": "dist/bundles/index.esm.js",
-  "unpkg": "dist/bundles/index.umd.js",
-  "source": "src/index.ts",
-  "types": "dist/typings/index.d.ts",
+  "main": "./src/index.ts",
   "homepage": "https://github.com/davideperozzi/smoovy",
   "repository": "https://github.com/davideperozzi/smoovy",
   "publishConfig": {
@@ -27,7 +23,6 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/emitter": "^1.0.0",
     "@smoovy/listener": "^1.0.0",
     "@smoovy/observer": "^1.0.0",
     "@smoovy/utils": "^1.0.0"
