--- a/packages/webgl/package.json
+++ b/packages/webgl/package.json
@@ -13,11 +13,9 @@
     "access": "public"
   },
   "scripts": {
-    "build": "esbuild ./src/** --outdir=dist && tsc",
+    "build": "esbuild ./src/**/*.ts --outdir=dist && tsc",
     "lint": "eslint ./src",
-    "dev": "vite --config ./vite.demo.ts",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "dev": "vite --config ./vite.demo.ts"
   },
   "keywords": [
     "webgl",
