--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ packages/**/*/coverage
 **/*.tsbuildinfo
 .parcel-cache
 .dev
-.yarn
 
 # Turbo Ignores
 .turbo
@@ -15,6 +14,7 @@ packages/**/*/coverage
 # https://yarnpkg.com/getting-started/qa/#which-files-should-be-gitignored
 .pnp.*
 .yarn/*
+.yarn-error.log
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
