--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -9,7 +9,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "esbuild --minify ./src/**/* --outdir=dist && tsc",
+    "build": "esbuild ./src/**/*.ts --outdir=dist && tsc",
     "lint": "eslint ./src",
     "dev": "vite",
     "test": "vitest",
