--- a/packages/scroller/package.json
+++ b/packages/scroller/package.json
@@ -9,10 +9,9 @@
     "access": "public"
   },
   "scripts": {
-    "build": "esbuild ./src/** --outdir=dist && tsc",
+    "build": "esbuild ./src/**/*.ts --outdir=dist && tsc",
     "lint": "eslint ./src",
-    "dev": "vite --config ./vite.demo.ts",
-    "coverage": "vitest run --coverage"
+    "dev": "vite --config ./vite.demo.ts"
   },
   "keywords": [
     "smoovy",
