--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,9 +9,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "esbuild ./src/** --outdir=dist && tsc",
+    "build": "esbuild ./src/**/*.ts --outdir=dist && tsc",
     "lint": "eslint ./src",
-    "test": "vitest",
     "coverage": "vitest run --coverage"
   },
   "keywords": [
