--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -4,7 +4,7 @@
   "description": "Component Manager, Service Manager all in one",
   "homepage": "https://github.com/davideperozzi/smoovy",
   "repository": "https://github.com/davideperozzi/smoovy",
-  "main": "./index.js",
+  "main": "./src/index.ts",
   "publishConfig": {
     "access": "public"
   },
