--- a/packages/emitter/package.json
+++ b/packages/emitter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smoovy/emitter",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Simple event emitter",
   "main": "./src/index.ts",
   "homepage": "https://github.com/davideperozzi/smoovy",
@@ -26,7 +26,7 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/listener": "1.0.0"
+    "@smoovy/listener": "^0.0.0"
   },
   "devDependencies": {
     "@vitest/coverage-c8": "^0.25.3",
