--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "smoovy-v2",
   "packageManager": "yarn@3.3.0",
+  "type": "module",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -38,13 +39,15 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
+    "fast-glob": "^3.2.12",
     "husky": "^8.0.0",
     "jsdom": "^20.0.3",
     "prettier": "^2.8.0",
     "sass": "^1.56.2",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.1",
     "turbo": "^1.6.3",
-    "typescript": "^4.9.3",
+    "typescript": "^4.9.4",
     "vite": "^3.2.4",
     "vitest": "^0.25.3"
   },
