--- a/packages/listener/package.json
+++ b/packages/listener/package.json
@@ -9,9 +9,9 @@
     "access": "public"
   },
   "scripts": {
-    "build": "esbuild ./src/**/*.ts --outdir=dist && tsc",
+    "build": "yarn run -T ts-node --esm ../../scripts/build.ts",
     "lint": "eslint ./src",
-    "test": "vitest",
+    "test": "vitest run --coverage",
     "coverage": "vitest run --coverage"
   },
   "keywords": [
