feat: moved ts-node to commonjs module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "packages/**/dist/**"
   ],
   "ts-node": {
-    "require": ["tsconfig-paths/register"]
+    "require": ["tsconfig-paths/register"],
+    "compilerOptions": {
+      "module": "commonjs",
+    }
   }
 }
