feat: added proper publish directory

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/davideperozzi/smoovy",
   "main": "./src/index.ts",
   "publishConfig": {
+    "directory": "./dist",
     "access": "public"
   },
   "scripts": {
