--- a/packages/tween/package.json
+++ b/packages/tween/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://github.com/davideperozzi/smoovy",
   "repository": "https://github.com/davideperozzi/smoovy",
   "publishConfig": {
+    "directory": "./dist",
     "access": "public"
   },
   "scripts": {
