--- a/.drone.yml
+++ b/.drone.yml
@@ -13,17 +13,17 @@ steps:
       CODECOV_TOKEN:
         from_secret: codecov_token
     commands:
-      - apk add --no-cache libc6-compat jq
+      - apk add --no-cache libc6-compat
       - corepack enable && corepack prepare --activate
       - yarn install
       - yarn lint
       - yarn test
       - yarn coverage
-      - yarn build
-  # - name: publish
-  #   image: node:18.12-alpine3.17
-  #   environment:
-  #     NPM_TOKEN:
-  #       from_secret: npm_publish_token
-  #   commands:
-  #     - yarn changeset publish --otp=$${NPM_TOKEN}
+  - name: release
+    image: node:18.12-alpine3.17
+    environment:
+      NPM_TOKEN:
+        from_secret: npm_publish_token
+    commands:
+      - apk add --no-cache libc6-compat
+      - yarn release
