--- a/packages/observer/package.json
+++ b/packages/observer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smoovy/observer",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Simple and easy-to-use ticker",
   "main": "./src/index.ts",
   "homepage": "https://github.com/davideperozzi/smoovy",
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "yarn run -T ts-node --esm ../../scripts/build.ts",
     "lint": "eslint ./src",
-    "dev": "vite --config ./vite.demo.ts",
+    "dev": "yarn run -T vite --config ./vite.demo.ts",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
