--- a/packages/ticker/package.json
+++ b/packages/ticker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smoovy/ticker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Simple and easy-to-use ticker",
   "main": "./src/index.ts",
   "homepage": "https://github.com/davideperozzi/smoovy",
@@ -13,6 +13,7 @@
     "build": "yarn run -T ts-node --esm ../../scripts/build.ts",
     "lint": "eslint ./src",
     "test": "vitest",
+    "dev": "vite --config ./vite.demo.ts",
     "coverage": "vitest run --coverage"
   },
   "keywords": [
