--- a/packages/webgl/tsconfig.json
+++ b/packages/webgl/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "composite": true
+    "composite": true,
+    "types": [
+      "vite-plugin-glsl/ext"
+    ]
   },
   "include": [
     "src/**/*"
