--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/eslint": "^8",
     "@types/jsdom": "^20",
-    "@types/prettier": "^2"
+    "@types/prettier": "^2",
+    "vite-plugin-glsl": "^1.2.1"
   }
 }
